# med_backend_finally

./: .gitignore  README.md  docker-compose.yml  wait-for-it.sh
accounts/: .env_example  dockerfile  main.py  pyproject.toml
accounts/config/: logger.py  metadata.py  settings.py
accounts/src/: mutation_schema.py  query_schema.py  resolvers.py  scalars.py  utils.py
admin/: .env_example  alembic.ini  createsuperuser.py  dockerfile  pyproject.toml
admin/alembic/: env.py
admin/alembic/versions/: 0176a8b5efb9_fixed_typos_6.py  0177e7593595_initpro_payments_receipts_and_email_to_.py  02897418f110_new_tables_have_been_added.py  02e44fd28f7c_the_new_table_users_default_objects_has_.py  02eaa0d19ec3_typos_have_been_fixed.py  02f6b7abc0ed_addressmiskladrtable_has_been_added_1.py  04c8c8379d4d_merge_415a848dac8a_and_1b141fcd362b.py  08a3eb208780_added_new_tables.py  091c7927a951_is_active_field_was_added_ok.py  0b06b91ea746_lpus_table_has_been_added.py  0cbb40e09730_service_age_fields_was_added.py  0f9cb5c12c95_new_field_has_been_added_to_access_.py  12595e5ad882_removed_not_needed_tables.py  12f3bd25925b_accounts_tables_go_to_biginteger_for_.py  16c086bffd99_added_unique_property_to_name_field.py  16da279b3897_ltree_to_string_nas_been_done.py  19757fbfdb5f_added_a_field_to_complex_services_ok.py  19a318f52ccf_first_admin_table_has_been_added.py  1b141fcd362b_shifrs_discounts_has_been_changed.py  1bebd620d44a_many_new_tables_have_been_added.py  1d245c2a8f98_removed_unique_parameter_from_service_.py  20687b537ec3_suscribe_tables_have_been_changed.py  21c502e8121a_ltree_to_string_has_been_done_5.py  23b080e6ef68_the_users_table_has_been_changed.py  23f2caba2395_users_documents_requests_has_been_added_.py  259fbb622a53_the_servicemspecialitytable_has_been_.py  25f2d676599b_for_department_id_nullable_true.py  2661dad3cb75_lpus_table_has_been_deleted.py  2b28e8221cd8_added_users_subscriptions_and_users_.py  2c034c923941_removed_not_needed_tables.py  2e9bbfe071c2_fixed_typos_1.py  2f690ea196ea_changing_some_parameters_has_been_done.py  30b84ff72f9d_policies_table_has_been_changed.py  3100c4fa4c9b_added_schedules_and_comments_it_s_ok.py  38673d7e828d_users_documents_requests_has_been_added.py  3b7caef654f7_changing_for_subscribes_have_been_added_.py  3ed6ccf58301_ltree_to_string_has_been_done_4.py  415a848dac8a_comment_has_been_changed.py  419e1a7795d3_field_quantity_has_been_added.py  42becdaaa9ce_changing_some_parameters_has_been_done.py  (+122 more)
admin/config/: main.py  responses.py  settings.py
admin/src/: mutation_schema.py  query_schema.py  resolvers.py  scalars.py
core/: pyproject.toml
core/authorization/: auth.py  permissions.py
core/config/: cache_connector.py  db.py  (+6 more)
db/: .env_example  Dockerfile
docs/: Interaction-continued.docx  Intercation_processes.docx  Intercation_processes_1.docx  Блок-схема(3).drawio  Личный кабинет ver. 2.6.docx  Личный кабинет ver. 2.7.docx  Приложение к договору Функциональные требования к разрабатываемому ПО и ограничения_ИТ Служба 13_09 (1).docx  Список данных для хранения в базе ЛК.docx
faustians/: dockerfile  main.py  pyproject.toml
faustians/config/: metadata.py  models.py.old  responses.py  routers.py  settings.py
faustians/static/: swagger-ui-bundle.js
main_process/: dockerfile  pyproject.toml
main_process/config/: main.py  metadata.py  routers.py  settings.py
main_process/src/: mutation_schema.py  query_schema.py  resolvers.py  scalars.py  utils.py
main_process/src/documents/: __init__.py  mutation_schema.py  query_schema.py  resolvers.py  scalars.py  views.py
main_process/src/users_cart/: mutation_schema.py  query_schema.py  resolvers.py  scalars.py
main_process/tests/: tests.py
oracle_connector/: pyproject.toml
payments/: dockerfile  pyproject.toml
payments/config/: db.py  main.py  metadata.py  settings.py
payments/src/: mutation_schema.py  query_schema.py  resolvers.py  scalars.py  scripts.py  scripts_initpro.py  utils.py
payments/static/: swagger-ui.css
payments/static/test_html/: test_html.html
phone_auth/: pyproject.toml
(+58 files in other folders)
