[tool.poetry]
name = "faustians"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
faust-streaming = {extras = ["fast", "redis", "rocksdb", "uvloop"], version = "^0.10.16"}
uvicorn = "^0.17.4"
prometheus-client = "^0.17.1"
requests = "^2.31.0"
oracledb = "^1.4.2"
strawberry-graphql = {extras = ["fastapi"], version = "^0.216.0"}
redis = "5.0.0"
pydantic = {extras = ["email"], version = "^1.10.8"}
strawberry-sqlalchemy-mapper = "^0.1.1"
python-dotenv = "1.0.0"
asyncpg = "0.27.0"
passlib = {version = "1.7.4", extras = ["bcrypt"]}
xmltodict = "^0.13.0"
ping3 = "^4.0.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
